--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
     <!-- Register Container -->
     <div class="container register-container" id="registerContainer">
       <h2>Join Startup</h2>
-      <form method="POST" action="index.html">
+      <form method="POST" action="">
         <div class="input-group">
           <input type="text" name="fullname" placeholder="Enter your full name" required>
         </div>
